--- a/gradle/linux.gradle
+++ b/gradle/linux.gradle
@@ -198,6 +198,8 @@ tasks.register("linux_natives_compile", Exec) {
             if (it.toString().contains("lwjgl-platform/src")) {
                 fileTree(it) {
                     include "*.c"
+                    include "**/*.c"
+                    include "**/**/*.c"
                 }.files.each {
                     println(it.toString())
                     args(it.toString())
