--- a/gradle/linux.gradle
+++ b/gradle/linux.gradle
@@ -200,6 +200,7 @@ tasks.register("linux_natives_compile", Exec) {
                     include "*.c"
                     include "**/*.c"
                     include "**/**/*.c"
+                    exclude "**/opengles/**"
                 }.files.each {
                     println(it.toString())
                     args(it.toString())
