fix native jar files being empty

--- a/lwjgl-platform/build.gradle
+++ b/lwjgl-platform/build.gradle
@@ -30,36 +30,39 @@ sourceSets {
 
 tasks.register("linuxNativeJar", Jar) {
     dependsOn ":compile"
-    from fileTree("bin/lwjgl") {
+    from fileTree("../bin/lwjgl") {
         include "liblwjgl*.so"
     }
-    from fileTree("lwjgl-platform/libs/linux") {
+    from fileTree("libs/linux") {
         include "libopenal*.so"
     }
     archiveClassifier.set("natives-linux")
     destinationDirectory.set(file("../temp/maven"))
+    archiveBaseName.set("lwjgl-platform")
 }
 
 tasks.register("macosxNativeJar", Jar) {
     dependsOn ":compile"
-    from fileTree("bin/lwjgl") {
+    from fileTree("../bin/lwjgl") {
         include "liblwjgl*.dylib"
     }
-    from fileTree("lwjgl-platform/libs/macosx") {
+    from fileTree("libs/macosx") {
         include "openal*.dylib"
     }
     archiveClassifier.set("natives-macosx")
     destinationDirectory.set(file("../temp/maven"))
+    archiveBaseName.set("lwjgl-platform")
 }
 
 tasks.register("windowsNativeJar", Jar) {
     dependsOn ":compile"
-    from fileTree("bin/lwjgl") {
+    from fileTree("../bin/lwjgl") {
         include "lwjgl*.dll"
     }
-    from fileTree("lwjgl-platform/libs/windows") {
+    from fileTree("libs/windows") {
         include "OpenAL*.dll"
     }
     archiveClassifier.set("natives-windows")
     destinationDirectory.set(file("../temp/maven"))
+    archiveBaseName.set("lwjgl-platform")
 }
