--- a/lwjgl-templates/build.gradle
+++ b/lwjgl-templates/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 }
 
 compileOpenalJava {
+    options.annotationProcessorPath = files(project(":lwjgl-common").sourceSets.main.output, project(":generator").sourceSets.main.output)
     options.generatedSourceOutputDirectory.set(file("../lwjgl/src/generated/java/"))
 
     options.compilerArgs += [
@@ -36,6 +37,6 @@ compileOpenalJava {
             "-d",
             file("../lwjgl-platform/src/generated/c/generated/openal").toString(),
             "-Atypemap=org.lwjgl.util.generator.openal.ALTypeMap",
-            "-Abinpath=" + "bin"
+            "-Abinpath=" + project(":generator").sourceSets.main.output.classesDirs[0]
     ]
 }
