Start porting templates processing

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /libs
 /src/generated
 /lwjgl-platform/src/generated
+/lwjgl/src/generated
 /lwjgl-platform/src/common/c/common/Debug
 /lwjgl-platform/src/common/c/common/Release
 /lwjgl-platform/src/windows/c/windows/Debug
